# blueink-client-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BlueInkClient.py  Endpoints.py  README.md  TokenizedRequests.py  blueinkclient.py  paginator.py  pyproject.toml  requirements.txt  setup.cfg  test_client.py  test_client_create_bundle_bytearray.py  test_client_create_bundle_file.py  test_client_create_bundle_url.py  test_client_list.py  tokenizedrequests.py
.github/workflows/: black.yml  build-wheel.yml  helper-tests.yml  pytest-helpers.yml  style-checks.yml  update-sdk.yml
examples/: bundle_create_from_template.py  client_create_bundle_bytearray.py  client_create_bundle_file.py  client_create_bundle_ordered_url.py  client_create_bundle_url.py  client_create_person.py  client_list.py  create_bundle_from_bytearray.py  create_bundle_from_file.py  create_bundle_from_template.py  create_bundle_from_url.py  create_bundle_from_url_in_order.py  create_bundle_with_auto_placement.py  create_from_envelope_template_example.py  create_person.py  list_bundles.py  list_bundles_etc.py  test_client_create_bundle_bytearray.py  test_client_create_bundle_file.py  test_client_create_bundle_ordered_url.py  test_client_create_bundle_url.py  test_client_create_person.py  test_client_list.py
model/: bundles.py
src/BlueInkClient/: client.py  paginator.py  tokenizedrequests.py
src/BlueInkClient/model/: bundles.py
src/blueink/: __init__.py  bundle_helper.py  client.py  constants.py  endpoints.py  paginator.py  person_helper.py  request_helper.py  test.py  tokenizedrequests.py  webhook_helper.py
src/blueink/model/: bundles.py  constants.py  helpers.py  persons.py  webhook.py
src/blueink/subclients/: bundle.py  envelope_template.py  packet.py  person.py  subclient.py  template.py  webhook.py
src/blueink/tests/: test_bundle_helper.py  test_client.py  test_person_helper.py  test_webhook_helper.py
src/blueink/utils/: testcase.py
src/examples/: example_bundle_creation_path.py  example_bundle_creation_url.py
