[metadata]
name = blueinkclient-kb3vwt
version = 1.0.0
author = BlueInkHQ
author_email = author@example.com
description = Python Client for Blue Ink web API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blueinkhq/blueink-client-python
project_urls =
    Bug Tracker = https://github.com/blueinkhq/blueink-client-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    munch
    requests
    pydantic
    email-validator

[options.extras_require]
munch = munch>=2.5.0;
requests = requests>=2.27.1;
pydantic = pydantic>=1.9.1
email-validator>=1.2.1


[options.packages.find]
where = src