[metadata]
name = blueink-client-python
version = 0.9.1
author = Blueink
author_email = pypi@blueink.com
description = Python Client for Blueink eSignature API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blueinkhq/blueink-client-python
project_urls =
    Bug Tracker = https://github.com/blueinkhq/blueink-client-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    munch
    requests
    pydantic
    email-validator

[options.extras_require]
munch = munch>=2.5;
requests = requests>=2.27;
pydantic = pydantic>=1.9
email-validator>=1.2


[options.packages.find]
where = src