[metadata]
name = blueink-client-python
version = 1.0.1
author = Blueink
author_email = pypi@blueink.com
description = Python Client for Blueink eSignature API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blueinkhq/blueink-client-python
project_urls =
    Bug Tracker = https://github.com/blueinkhq/blueink-client-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    munch
    requests
    pydantic>=2.0
    email-validator>=2.0

[options.extras_require]
munch = munch>=2.5;
requests = requests>=2.31;
pydantic = pydantic>=2.0
email-validator = email-validator>=2.0


[options.packages.find]
where = src
